SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Budget_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Budget_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS2-T22 &amp; SSP-292 Checkbox field tells if the budget is confirmed</description>
    <label>Budget Confirmed</label>
    <type>Checkbox</type>
</CustomField>