SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Cross_Selling__c.field-meta.xml
<CustomField>
    <fullName>Cross_Selling__c</fullName>
    <description>SS2-T22 &amp; SSP-292 - Identifies any cross selling opportunity</description>
    <inlineHelpText>Select the relevant cross sell on the opportunity</inlineHelpText>
    <label>Cross-Selling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OMNOVA</fullName>
            </value>
            <value>
                <fullName>AS to CCS</fullName>
            </value>
            <value>
                <fullName>AS to HPPM</fullName>
            </value>
            <value>
                <fullName>HPPM to CCS</fullName>
            </value>
            <value>
                <fullName>HPPM to AS</fullName>
            </value>
            <value>
                <fullName>CCS to AS</fullName>
            </value>
            <value>
                <fullName>CCS to HPPM</fullName>
            </value>
            <value>
                <fullName>AS Synergy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>