SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Discovery_Completed__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS2-T22 &amp; SSP-292 The phase of Opportunity if the discovery or initial details are captured.</description>
    <label>Discovery Completed</label>
    <type>Checkbox</type>
</CustomField>