SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Exhibition_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Name__c</fullName>
    <description>Mapped with the &apos;Exhibition Name&apos; field on Lead Object</description>
    <label>Exhibition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>