SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Expected_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sales_Price__c</fullName>
    <description>Weighted value of expected revenue / ton</description>
    <formula>Total_Revenue__c *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Weighted value of total sales price - auto populated by the system</inlineHelpText>
    <label>Expected Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>