SynProdGITV1/force-app/main/default/objects/Opportunity/fields/First_Commercial_Order_Completed__c.field-meta.xml
<CustomField>
    <fullName>First_Commercial_Order_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS2-T22 &amp; SSP-292 This will be check if the at least one Commercial order is placed. This order will bot be a Sample order</description>
    <inlineHelpText>Confirm if the first Commercial order is in place</inlineHelpText>
    <label>First Commercial Order Completed</label>
    <type>Checkbox</type>
</CustomField>