SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Forecasted__c.field-meta.xml
<CustomField>
    <fullName>Forecasted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS2-T22 &amp; SSP-292 This field will tell if the Opportunity is being considred in forcasting.</description>
    <inlineHelpText>Confirm if forecasted in Arkieva</inlineHelpText>
    <label>Forecasted?</label>
    <type>Checkbox</type>
</CustomField>