SynProdGITV1/force-app/main/default/objects/Opportunity/fields/GM_CY_Impact__c.field-meta.xml
<CustomField>
    <fullName>GM_CY_Impact__c</fullName>
    <description>Current Year Impact of GM</description>
    <formula>Amount*((13-MONTH(TODAY()))/12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GM CY Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>