SynProdGITV1/force-app/main/default/objects/Opportunity/fields/HAS_TERRITORY_A_VALUE__c.field-meta.xml
<CustomField>
    <fullName>HAS_TERRITORY_A_VALUE__c</fullName>
    <description>SS2-T22 &amp; SSP-292 this is a Formula field used in Flow</description>
    <formula>NOT(OR(ISBLANK(Territory2Id) , ISNULL(Territory2Id)))</formula>
    <label>HAS_TERRITORY_A_VALUE</label>
    <type>Checkbox</type>
</CustomField>