SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Is_Close_Date_in_past__c.field-meta.xml
<CustomField>
    <fullName>Is_Close_Date_in_past__c</fullName>
    <description>INC 163276: To check if the close date is in the past for Component Visibility</description>
    <formula>CloseDate &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Close Date in past?</label>
    <type>Checkbox</type>
</CustomField>