SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Is_My_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Opportunity__c</fullName>
    <description>It is used to identify if the owner is the currrent user or not. Used in reports / dashboards.</description>
    <formula>IF(OwnerId =  $User.Id , True, False)</formula>
    <label>Is My Opportunity?</label>
    <type>Checkbox</type>
</CustomField>