SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Last_Activity_Ind__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Ind__c</fullName>
    <description>Last Activity Indicator</description>
    <formula>IF((OR((TODAY()- LastActivityDate) &gt;  $CustomMetadata.SYN_Analytics__mdt.Oppotunity_Dashboard.Activity_Check_t__c , ISNULL(LastActivityDate))),&quot;🔴&quot;,&quot;🟢&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last Activity Indicator</inlineHelpText>
    <label>Last Activity Check</label>
    <type>Text</type>
</CustomField>