SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Last_Chatter_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Chatter_Post_Date__c</fullName>
    <label>Last Chatter Post Date</label>
    <type>DateTime</type>
</CustomField>