SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>SS2-T22 &amp; SSP-292</description>
    <inlineHelpText>Capture of the reason of loss</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales - Price</fullName>
            </value>
            <value>
                <fullName>Sales - Payment Term</fullName>
            </value>
            <value>
                <fullName>Sales - To Distribution</fullName>
            </value>
            <value>
                <fullName>Product - Performance</fullName>
            </value>
            <value>
                <fullName>Product - SYN Product Mgt.</fullName>
            </value>
            <value>
                <fullName>Product - Development time</fullName>
            </value>
            <value>
                <fullName>Service - SYN Regulatory</fullName>
            </value>
            <value>
                <fullName>Service - SYN Logistics</fullName>
            </value>
            <value>
                <fullName>Service - SYN Supply Chain</fullName>
            </value>
            <value>
                <fullName>Service - Priority Tech.</fullName>
            </value>
            <value>
                <fullName>Service - Priority Sales</fullName>
            </value>
            <value>
                <fullName>Customer - Supplier Structure</fullName>
            </value>
            <value>
                <fullName>Customer - End Product Cancelled</fullName>
            </value>
            <value>
                <fullName>Customer - Demand Lost</fullName>
            </value>
            <value>
                <fullName>Customer - Gvt. Regulations</fullName>
            </value>
            <value>
                <fullName>Customer - Geopolitics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>