SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <description>SSP-288/SS2-T66: Formula field to get corresponding &apos;Market Segment&apos; value from Custom Object &apos;Industry Segment&apos; using the Opportunity&apos;s &apos;Application&apos; field value selected by User</description>
    <formula>Application__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated when you select an Application</inlineHelpText>
    <label>Market Segment</label>
    <type>Text</type>
</CustomField>