SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS2-T22 &amp; SSP-292 This checkbox will be checked if Opportunity is migrated to this Org.</description>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>