SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Opportunity_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_External_ID__c</fullName>
    <description>Opportunity External ID used for data migration.
This will hold C4C ID</description>
    <externalId>true</externalId>
    <label>Opportunity External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>