SynProdGITV1/force-app/main/default/objects/Opportunity/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>SS2-T22 &amp; SSP-292 Purchase Order Number</description>
    <inlineHelpText>Update the PO number of the first commercial order</inlineHelpText>
    <label>PO Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>