SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <description>Project Number</description>
    <inlineHelpText>PIMS (IDL or Tactical Project) - PIMS 4 digits
LabDB (ex. 24AC1018-01) or Signals Notebook number: Using as link to records between SFDC and PIMS system</inlineHelpText>
    <label>Project Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>