SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <description>PIMS Project Type</description>
    <inlineHelpText>Tactical Project could include in scope FATS or product transfer projects</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDL</fullName>
            </value>
            <value>
                <fullName>Tactical Project</fullName>
            </value>
            <value>
                <fullName>Tech Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>