SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Quantity_CY_Impact__c.field-meta.xml
<CustomField>
    <fullName>Quantity_CY_Impact__c</fullName>
    <description>Current year impact of Volume</description>
    <formula>Total_Volume__c *((13-MONTH(TODAY()))/12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity CY Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>