SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Reporting_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Sub_Group__c</fullName>
    <description>SSP-288/SS2-T66: Formula field to get corresponding &apos;Reporting Sub Group&apos; value from Custom Object &apos;Industry Segment&apos; using the Opportunity&apos;s &apos;Industry Segment&apos; field value selected by User</description>
    <formula>Industry_Segment__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated when you select an industry segment.</inlineHelpText>
    <label>Reporting Sub Group</label>
    <type>Text</type>
</CustomField>