SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Revenue_CY_Impact__c.field-meta.xml
<CustomField>
    <fullName>Revenue_CY_Impact__c</fullName>
    <description>Current Year impact of Revenue</description>
    <formula>Total_Revenue__c *((13-MONTH(TODAY()))/12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue CY Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>