SynProdGITV1/force-app/main/default/objects/Opportunity/fields/ROI_Analysis_Completed__c.field-meta.xml
<CustomField>
    <fullName>ROI_Analysis_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS2-T22 &amp; SSP-292 This field will tell if Return on investment is completed</description>
    <label>ROI Analysis Completed</label>
    <type>Checkbox</type>
</CustomField>