SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Sample_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Sample_Feedback__c</fullName>
    <description>SS2-T22 &amp; SSP-292 Feedback of Sample in a descriptive way</description>
    <label>Sample Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>