SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Stage_Risk_Ind__c.field-meta.xml
<CustomField>
    <fullName>Stage_Risk_Ind__c</fullName>
    <description>Stage Check</description>
    <formula>IF(OR(AND(TEXT( StageName ) = &quot;Adoption&quot;, ( CloseDate  - TODAY()) &lt; $CustomMetadata.SYN_Analytics__mdt.Oppotunity_Dashboard.Adoption_Stage__c ),CloseDate &lt; TODAY()),
  &quot;🔴&quot;,
  IF(OR(AND(TEXT(StageName) = &quot;Commercial&quot;, (CloseDate - TODAY()) &lt; $CustomMetadata.SYN_Analytics__mdt.Oppotunity_Dashboard.Commercial_Stage_Threshold__c ),CloseDate &lt; TODAY()),
    &quot;🔴&quot;,
    IF(OR(AND(TEXT(StageName) = &quot;Operations&quot;, (CloseDate - TODAY()) &lt;  $CustomMetadata.SYN_Analytics__mdt.Oppotunity_Dashboard.Operations__c  ),CloseDate &lt; TODAY()),
      &quot;🔴&quot;,
      IF(OR(AND(TEXT(StageName) = &quot;Chemistry&quot;, (CloseDate - TODAY()) &lt; $CustomMetadata.SYN_Analytics__mdt.Oppotunity_Dashboard.Chemistry_Stage_Threshold__c),CloseDate &lt; TODAY()),
        &quot;🔴&quot;,
        IF(OR(AND(TEXT(StageName) = &quot;Qualify&quot;, (CloseDate - TODAY()) &lt;  $CustomMetadata.SYN_Analytics__mdt.Oppotunity_Dashboard.Qualify_Stage_Threshold__c ),CloseDate &lt; TODAY()),
          &quot;🔴&quot;,
          &quot;🟢&quot;
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stage Check based on duration of each stage.</inlineHelpText>
    <label>Stage Risk</label>
    <type>Text</type>
</CustomField>