SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Target_Plant__c.field-meta.xml
<CustomField>
    <fullName>Target_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SS2-T22 &amp; SSP-292 To which plant this opportunity targets to</description>
    <label>Target Plant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plant__c.Active_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>