SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Territory_L1__c.field-meta.xml
<CustomField>
    <fullName>Territory_L1__c</fullName>
    <description>Top-level (Level 1) territory in the hierarchy associated with this Opportunity. Used in Dashboards.</description>
    <label>Territory L1</label>
    <length>120</length>
    <type>Text</type>
</CustomField>