SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Territory_L2__c.field-meta.xml
<CustomField>
    <fullName>Territory_L2__c</fullName>
    <description>Second-level (Level 2) territory in the hierarchy associated with this Opportunity. Used in Dashboards.</description>
    <label>Territory L2</label>
    <length>120</length>
    <type>Text</type>
</CustomField>