SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Territory_L3__c.field-meta.xml
<CustomField>
    <fullName>Territory_L3__c</fullName>
    <description>Third-level (Level 3) territory in the hierarchy associated with this Opportunity. Used in Dashboards.</description>
    <label>Territory L3</label>
    <length>120</length>
    <type>Text</type>
</CustomField>