SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <description>Roll up all sales prices of all products on the opportunity</description>
    <inlineHelpText>Total revenue of the opportunity</inlineHelpText>
    <label>Total Revenue</label>
    <summarizedField>OpportunityLineItem.Revenue__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>