SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <description>Total quantity of all products</description>
    <inlineHelpText>Total volume of all products on the opportunity</inlineHelpText>
    <label>Total Volume</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>