SynProdGITV1/force-app/main/default/objects/Opportunity/fields/Value_Selling_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Value_Selling_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS2-T22 &amp; SSP-292 Identifies if the opportunity is a value selling opportunity</description>
    <inlineHelpText>Confirm if opportunity is a value selling opportunity</inlineHelpText>
    <label>Value Selling Opportunity</label>
    <type>Checkbox</type>
</CustomField>