SynProdGITV1/force-app/main/default/objects/Opportunity/validationRules/Industry_Segment_Application_Valid_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Segment_Application_Valid_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
								AND(
												NOT(ISBLANK(Industry_Segment__c)),
												NOT(ISBLANK(Application__c)),
												(Application__r.Parent__r.Parent__r.Code__c !=  Industry_Segment__r.Code__c),
												$User.Username &lt;&gt; &apos;support.gauri@gauri.com.syn&apos;
								),
								True,
								False
				)</errorConditionFormula>
    <errorMessage>The combination of Industry Segment and Application must be valid</errorMessage>
</ValidationRule>