SynProdGITV1/force-app/main/default/objects/Opportunity/validationRules/Manager_Required_For_Adoption_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Manager_Required_For_Adoption_Stage</fullName>
    <active>true</active>
    <description>Ensures that an Opportunity owner has a manager assigned before the record can move to the Adoption stage.</description>
    <errorConditionFormula>AND(
    TEXT(StageName) = &quot;Adoption&quot;,
    ISBLANK(Owner.ManagerId)
)</errorConditionFormula>
    <errorMessage>Please assign an Approval Manager before moving to the Adoption stage.</errorMessage>
</ValidationRule>