SynProdGITV1/force-app/main/default/objects/Opportunity/validationRules/Prevent_Opportunity_Closure_Without_Appr.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Opportunity_Closure_Without_Appr</fullName>
    <active>true</active>
    <description>Prevents users from setting the Opportunity Stage = Closed Won if the Approval Status is not Approved.
This ensures that only Opportunities that have gone through and passed the approval process can be closed as won.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    NOT(ISPICKVAL(Approval_Status__c, &quot;Approved&quot;))
)</errorConditionFormula>
    <errorMessage>This Opportunity is not approved yet — you cannot close it.</errorMessage>
</ValidationRule>