SynProdGITV1/force-app/main/default/objects/Opportunity/listViews/My_Territory_Team_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Territory_Team_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>MyTeamTerritory</filterScope>
    <label>My Territory Team Opportunities</label>
</ListView>